k8s/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-app-ingress
  namespace: devops-app

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      # Backend API FIRST (important order)
      - path: /api
        pathType:  Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000

      # Frontend SECOND
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
